force-app/main/default/objects/Payment__c/fields/ACHType__c.field-meta.xml
<CustomField>
    <fullName>ACHType__c</fullName>
    <label>ACHType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>