force-app/main/default/objects/Payment__c/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <externalId>true</externalId>
    <label>Authorization Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>