force-app/main/default/objects/Payment__c/fields/Business_License_Application__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>