force-app/main/default/objects/Payment__c/fields/CCN__c.field-meta.xml
<CustomField>
    <fullName>CCN__c</fullName>
    <label>CCN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>