force-app/main/default/objects/Payment__c/fields/CreditType__c.field-meta.xml
<CustomField>
    <fullName>CreditType__c</fullName>
    <label>CreditType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>