force-app/main/default/objects/Payment__c/fields/Email_Receipt_to__c.field-meta.xml
<CustomField>
    <fullName>Email_Receipt_to__c</fullName>
    <label>Email Receipt to</label>
    <type>Email</type>
</CustomField>