force-app/main/default/objects/Payment__c/fields/PayStatus__c.field-meta.xml
<CustomField>
    <fullName>PayStatus__c</fullName>
    <label>PayStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>