force-app/main/default/objects/Payment__c/fields/Person_Examination__c.field-meta.xml
<CustomField>
    <fullName>Person_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Examination</label>
    <referenceTo>PersonExamination</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>