force-app/main/default/objects/Payment__c/fields/Regulatory_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Transaction_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Transaction Fee</label>
    <referenceTo>RegulatoryTrxnFee</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>