force-app/main/default/objects/Payment__c/fields/xmlRequest__c.field-meta.xml
<CustomField>
    <fullName>xmlRequest__c</fullName>
    <label>xmlRequest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>