force-app/main/default/objects/Payment__c/fields/xmlResponse__c.field-meta.xml
<CustomField>
    <fullName>xmlResponse__c</fullName>
    <label>xmlResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>