force-app/main/default/objects/Payment__c/fields/xmlRESTResponse__c.field-meta.xml
<CustomField>
    <fullName>xmlRESTResponse__c</fullName>
    <label>xmlRESTResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>